--- a/searchpd/searchpd/Areas/HelpPage/Views/Shared/_Layout.cshtml
+++ b/searchpd/searchpd/Areas/HelpPage/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title - SearchPD</title>
     @RenderSection("scripts", required: false)
 </head>
 <body>
