testing connection to database

--- a/searchpd/searchpd/Views/Home/Index.cshtml
+++ b/searchpd/searchpd/Views/Home/Index.cshtml
@@ -5,3 +5,11 @@
 <h2>Home</h2>
 
 <p>Initial version - empty for now</p>
+
+@foreach (var d in ViewBag.datalist)
+{
+    <p>@d.Name</p>
+    
+}
+
+
