--- a/searchpd/searchpd/Views/Shared/_Layout.cshtml
+++ b/searchpd/searchpd/Views/Shared/_Layout.cshtml
@@ -8,14 +8,13 @@
 </head>
 <body>
     
-    <ul id="menu">
+@*    <ul id="menu">
         <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
         <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-    </ul>
+    </ul>*@
 
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
 </html>
