Improve simple search description

--- a/searchpd/searchpd/Views/Home/Index.cshtml
+++ b/searchpd/searchpd/Views/Home/Index.cshtml
@@ -5,10 +5,11 @@
 <h2>Search</h2>
 
 <p>
-    Enter a category name, then click outside the input box.
-    The system will show suggestions matching the input.
+    Enter some text, then click outside the input box.
 </p>
-
+<p>
+    The system will show all categories that start with the entered text, or nothing if there are no such categories.
+</p>
 <div class="input-with-suggestions">
     <input type="text" class="search" id="search"/>
     <div class="suggestions" id="suggestions"></div>
