--- a/searchpd/searchpd/Views/Home/Index.cshtml
+++ b/searchpd/searchpd/Views/Home/Index.cshtml
@@ -12,9 +12,13 @@
 </p>
 <div class="input-with-suggestions">
     <input type="text" class="search" id="search"/>
-    <div class="suggestions" id="suggestions"></div>
+    
+    @*Using a table instead of a div, so the suggestions box visually grows when you get long category lines*@
+    <table border="0" cellpadding="0" cellspacing="0">
+        <tr><td class="suggestions" id="suggestions">
+        </td></tr>
+    </table>
 </div>
-
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/search")
