Updating instructions on the search page

--- a/searchpd/searchpd/Views/Home/Index.cshtml
+++ b/searchpd/searchpd/Views/Home/Index.cshtml
@@ -5,10 +5,7 @@
 <h2>Search</h2>
 
 <p>
-    Enter some text, then click outside the input box.
-</p>
-<p>
-    The system will show all categories that start with the entered text, or nothing if there are no such categories.
+    Enter some text. If there are 3 or more characters in the search box, the system will attempt to retrieve all matching categores, with their parents if any.
 </p>
 <div class="input-with-suggestions">
     <input type="text" class="search" id="search"/>
