Added product codes to suggestions

--- a/searchpd/searchpd/Views/Home/Index.cshtml
+++ b/searchpd/searchpd/Views/Home/Index.cshtml
@@ -5,7 +5,9 @@
 <h2>Search</h2>
 
 <p>
-    Enter some text. If there are 3 or more characters in the search box, the system will attempt to retrieve all matching categores, with their parents if any.
+    Enter some text. If there are 3 or more characters in the search box, 
+    the system will retrieve all matching categories, with their parents if any, 
+    and all matching product codes.
 </p>
 <div class="input-with-suggestions">
     <input type="text" class="search" id="search"/>
