--- a/searchpd/main/Views/Home/Index.cshtml
+++ b/searchpd/main/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
     <script type="text/javascript">
         var Searcher;
         (function (Searcher) {
-            Searcher.searchUrl = "@(ViewBag.AutocompleteSearchApiUrl)" ;
+            Searcher.searchUrl = "@(ViewBag.AutocompleteSearchUrl)" ;
         })(Searcher || (Searcher = {}));
     </script>
 }
