final search implementation

--- a/searchpd/main/Views/Admin/Index.cshtml
+++ b/searchpd/main/Views/Admin/Index.cshtml
@@ -8,8 +8,8 @@
     You would use this after changes have been made to the database.
 </p>
 <button id="refreshbutton">Refresh</button>
-<p id="progress-searchresults" class="progress"></p>
-<p id="progress-suggestions" class="progress"></p>
+<p id="progress-searchresults"></p>
+<p id="progress-suggestions"></p>
 
 @section Scripts {
 
