--- a/searchpd/main/Views/Home/Index.cshtml
+++ b/searchpd/main/Views/Home/Index.cshtml
@@ -29,8 +29,8 @@
     
     <script type="text/javascript">
         var Searcher;
-        (function (Searcher) {
-            Searcher.searchUrl = "@(ViewBag.AutocompleteSearchUrl)" ;
+        (function (searcher) {
+            searcher.searchUrl = "@(ViewBag.AutocompleteSearchUrl)" ;
         })(Searcher || (Searcher = {}));
     </script>
 }
